2005-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/parser.cpp: Implemented feature request [1167378]. An
	error message is displayed if the Parser's init() functions can
	not open a file.

	* extras/itload.m, extras/itsave.m, extras/Makefile.am,
	Makefile.am, configure.ac: Added missing `itload.m' and `itsave.m'
	files for loading and saving an itfile in Matlab/Octave (function
	and file names changed from `load_it.m' and `save_it.m'). 

2005-12-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* README, doc/local/index.doc.in: Introduction text updated

	* itpp.spec.in: Initial spec file prepared. Not yet included in
	the package.

	* itpp.pc.in: Cosmetic changes

	* doc/local/verification.doc: Updated with new information from
	testers

	* NEWS: Updated to reflect recent changes

	* itpp/base/transforms.cpp, tests/transforms_test.ref: Fixed bug
	[1388024]. Both versions of fft_real() and ifft_real() functions
	(based on FFTW3 and MKL) worked differently than the reference
	Matlab's fft()/ifft() functions. It seems to be fixed now, but an  
	additional code overhead was added.

2005-12-22  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* tests/gf2mat_test.cpp: New short test program for GF2mat class

2005-12-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/*.cpp, tests/*.ref: Fixed some of the test programs when
	IT++ uses the MKL. Real IFFT function gives incorrect results for
	MKL!!!

	* configure.ac: Updated version number to the upcomming final
	3.9.0 release

	* doc/local/index.doc.in: Added "What's New" links to the NEWS and
	ChangeLog files in the CVS

	* Makefile.am, doc/Makefile.am: Added `disthtml' target for
	preparing packages with HTML documentation

	* doc/sourceforge/howto_release_itpp.html: Updated the
	documentation

==============================================================================

2005-12-21  Adam Piatyszek  <ediap@users.sourceforge.net>
