@@ -17,15 +17,15 @@
 <a href="help_wanted.html">Make a Difference</a><br>
 <br>
 <b>Download IT++:</b><br>
-<a href="https://sourceforge.net/project/showfiles.php?group_id=37044">Files at SourceForge</a><br>
+<a href="http://sourceforge.net/project/showfiles.php?group_id=37044">Files at SourceForge</a><br>
 <a href="http://prdownloads.sourceforge.net/itpp/itpp-@PACKAGE_VERSION@.tar.gz?download">itpp-@PACKAGE_VERSION@.tar.gz</a><br>
 <a href="http://itpp.sourceforge.net/doc/itpp-html-doc-@PACKAGE_VERSION@.tar.gz">itpp-html-doc-@PACKAGE_VERSION@.tar.gz</a><br>
 <a href="http://prdownloads.sourceforge.net/itpp/itpp-external-2.0.0.tar.gz?download">itpp-external-2.0.0.tar.gz</a><br>
 <br>
 <b>Bugs and Forums:</b><br>
-<a href="https://sourceforge.net/tracker/?atid=418758&group_id=37044&func=browse">Bug Reports</a><br>
-<a href="https://sourceforge.net/forum/forum.php?forum_id=115656">Ask for Help</a><br>
-<a href="https://sourceforge.net/forum/forum.php?forum_id=115655">Discuss IT++</a><br>
+<a href="http://sourceforge.net/tracker/?atid=418758&group_id=37044&func=browse">Bug Reports</a><br>
+<a href="http://sourceforge.net/forum/forum.php?forum_id=115656">Ask for Help</a><br>
+<a href="http://sourceforge.net/forum/forum.php?forum_id=115655">Discuss IT++</a><br>
 <br>
 <b>What's New (in CVS):</b><br>
 <a href="http://cvs.sourceforge.net/viewcvs.py/itpp/itpp/NEWS?view=markup">NEWS</a><br>
@@ -77,7 +77,7 @@ Cygwin or Microsoft Visual C++ .NET) and Mac OS X (more testers needed).
 
 <b>IT++ Development:</b><br>
 <a href="http://sourceforge.net/projects/itpp/">IT++ at SourceForge</a><br>
-<a href="https://sourceforge.net/cvs/?group_id=37044">IT++ CVS Repository</a><br>
+<a href="http://sourceforge.net/cvs/?group_id=37044">IT++ CVS Repository</a><br>
 <a href="codingrules.html">Coding Rules</a><br>
 <a href="documentation.html">Documentation Rules</a><br>
 <a href="test.html">Test Rules</a><br>
